# rss_reader

./: Cargo.toml  README.md
example_files/: default.txt  test.csv  text.txt
src/: main.rs  opts.rs
src/readers/: csv_reader.rs  mod.rs  rss_reader.rs
src/writers/: csv_writer.rs  mod.rs  rss_writer.rs
