[package]
name = "rss_reader"
version = "0.1.0"
authors = ["Joseph.Orme <brogramn@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
csv = "1.1.5"
rss = "1.10.0"

[dependencies.reqwest]
version = "0.11.1"
features = ["blocking"]
